--- a/package.json
+++ b/package.json
@@ -4,23 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require test/setup.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "start": "node src/server.js",
+    "predeploy": "npm audit && npm run migrate:production",
+    "deploy": "git push heroku master"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheChunkyPumpkinhead/noteful-api.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TheChunkyPumpkinhead/noteful-api/issues"
-  },
-  "homepage": "https://github.com/TheChunkyPumpkinhead/noteful-api#readme",
   "dependencies": {
+    "bluebird": "^3.7.1",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "morgan": "^1.10.0"
+    "helmet": "^3.21.1",
+    "knex": "^0.20.1",
+    "logger": "0.0.1",
+    "mocha": "^6.2.1",
+    "morgan": "^1.9.1",
+    "npm-check-updates": "^3.2.1",
+    "pg": "^7.12.1",
+    "supertest": "^4.0.2",
+    "xss": "^1.0.6"
+  },
+  "devDependencies": {
+    "postgrator-cli": "^3.2.0"
   }
-}
